Document that #hash is not called for certain core classes [ci skip]

Fixes [Bug #16850]